--- a/ChFolio/cv.html
+++ b/ChFolio/cv.html
@@ -81,7 +81,7 @@
 <!--/ Nav End /-->
 
 <header class="header PdfCv">
-    <embed class="PdfCv" src="img/cv-houria-vr-F.pdf" scrolling="no" style='overflow: hidden' width="100%" height="100%" />
+    <embed class="PdfCv" src="img/houria-cv.pdf" scrolling="no" style='overflow: hidden' width="100%" height="100%" />
 </header>
 <script src="js/admin.js"></script>
 </body>
